--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/foundation.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spooned | Welcome</title>
+    <title>Zaptent | Welcome</title>
   </head>
 
   <body>
@@ -158,7 +158,7 @@
           <div class="large-6 large-push-3 columns">
             <p>Naperville, IL</p>
             <p>penisbutt</p>
-            <p>© Copyright 2016 Spooned. All rights reserved.</p>
+            <p>© Copyright 2016 Zaptent. All rights reserved.</p>
           </div>
           <div class="large-6 columns">
             <!--
